# model_generator_c_plus_plus

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
assets/datasets/austens_boxes/: generate_boxes
assets/generated_boxes/: generated_box.off  generated_box_1.off  generated_box_10.off  generated_box_2.off  generated_box_3.off  generated_box_4.off  generated_box_5.off  generated_box_6.off  generated_box_7.off  generated_box_8.off  generated_box_9.off  model.pt  model_generator
include/: cli_args.h  cube_generator.h  neural_network.h
model_generator/: main.cpp
model_generator/datasets/austens_boxes/: algorithmic_box_generator.cpp  algorithmic_box_generator.h  generate_boxes
model_generator/utils/: data_formatter.cpp  data_formatter.h  data_loader.cpp  data_loader.h  neural_network.cpp
reference/: data_formatter.h  data_loader.cpp  data_loader.h  neural_network.h
src/: cli_args.cpp  cube_generator.cpp  data_formatter.cpp  data_loader.cpp  data_loader.h  main.cpp  main.py  neural_network.cpp  neural_network.h
